<resources>
    <string name="app_name">Popular Movies</string>
    <string name="pref_sort_label">Sort</string>
    <string name="pref_sort_most_popular_label">Most Popular</string>
    <string name="pref_sort_highest_rated_label">Highest Rated</string>

    <string name="pref_sort_key">sort_by</string>
    <string name="pref_sort_highest_rated">top_rated</string>
    <string name="pref_sort_most_popular">popularity</string>
    <string name="action_settings">Settings</string>
    <string name="popularity">popular</string>
    <string name="vote_average">top_rated</string>
    <string name="popular">By Popular</string>
    <string name="Rating">By Rate</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail_activty">DetailActivty</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="sort">Sort</string>
    <string name="Release_date">Release date:</string>
    <string name="Rate">Rate:</string>
    <string name="Setting">Setting</string>
    <string name="pref_sorting_criteria_key">sorting_criteria</string>
    <string name="pref_sorting_order_key">sorting_order</string>
    <string name="pref_sorting_order_default_value">desc</string>
    <string name="pref_sorting_criteria_default_value">popular</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="simgPosterBig">this is the image that will be the the place that backdrop path will be loaded </string>
    <string name="simgPoster">this is the image that will be the the place that poster path will be loaded </string>
    <string name="title_activity_jump_page">JumpPage</string>
    <string name="Page">Page: </string>
    <string name="Jump">Jump</string>
    <string name="Jump_to">Jump To:</string>
    <string name="myApiKey"></string>
    <string name="movie_detail_check_trailer">"Check out %1$s - %2$s</string>
    <string name="review">Review:</string>
    <string name="trailer">Trailer:</string>
    <string name="favorite">Favorite</string>
</resources>
